tests/lnttool/submit_badurl.shtest
# RUN: not lnt submit "http://doesnotexist.invalid/db_default/submitRun" %{shared_inputs}/sample-report.json 2>&1 | filecheck %s
# CHECK: error: could not resolve 'http://doesnotexist.invalid/db_default/submitRun':
